--- a/interest-web/public/index.html
+++ b/interest-web/public/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/quill@1.3.4/dist/quill.core.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/quill@1.3.4/dist/quill.snow.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/quill@1.3.4/dist/quill.bubble.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/iview@3.1.5/dist/styles/iview.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/element-ui@2.10.0/lib/theme-chalk/index.css">
     <!-- 外部js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/iview@3.1.5/dist/iview.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/quill@1.3.4/dist/quill.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuex@^3.0.1/dist/vuex.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@^0.16.2/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-router@^3.0.1/dist/vue-router.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.10.0/lib/index.js"></script>
 
   </head>
   <body>
